SEBSERV-549 fixed. was introduced by fix of SEBSERV-515 + code cleanup